--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "bundleDependencies": false,
   "dependencies": {
     "bindings": "^1.5.0",
-    "node-addon-api": "^3.0.0"
+    "node-addon-api": "^3.0.0",
+    "linear-program-parser": "^1.0.11"
   },
   "deprecated": false,
   "devDependencies": {
