--- a/.travis.yml
+++ b/.travis.yml
@@ -36,14 +36,13 @@ language: node_js
 "node_js":
   - "14"
 script: "npm run travis"
-before_script:
+before_install:
   - npm install typescript
   - npm install node-gyp
   - npm install -D @types/node
   - npm install -D eslint
   - npm install -D @typescript-eslint/eslint-plugin @typescript-eslint/parser
   - npm install -D npm-run-all
-  - npm install -D prettier eslint-config-prettier eslint-plugin-prettier
   - npm install -D eslint-plugin-prefer-arrow
   - npm install -D coveralls
   - npm install bingings
