--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,9 @@
 #
 ---
 os: "linux"
-dist: "bionic"
-arch:
-  - "arm64"
+dist: bionic
+compiler:
+  - gcc
 language: node_js
 "node_js":
   - "14"
