--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ language: node_js
 "node_js":
   - "14"
 script: "npm run travis"
-before_install:
+before_script:
   - npm install typescript
   - npm install node-gyp
   - npm install -D @types/node
