Add clang-7 and node-11 to test

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,10 @@ os: "linux"
 dist: bionic
 compiler:
   - gcc
+  - clang
 language: node_js
 "node_js":
+  - "11"
   - "14"
 script: "npm run travis"
 before_script:
