--- a/.travis.yml
+++ b/.travis.yml
@@ -27,12 +27,16 @@
 #
 ---
 language: node_js
-  - "13"
-  - "14"
-jobs:
-  include:
-    - os: linux
-      dist: bionic
+  - 13
+  - 14
+os: linux
+dist: bionic
+compiler: g++
+
+# jobs:
+#  include:
+#    - os: linux
+#      dist: bionic
 #    - os: linux
 #      dist: bionic
 #      compiler: clang
