--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,6 @@
 language: node_js
 node_js:
   - 11
-  - 12
 os:
   - linux
   - osx
@@ -41,7 +40,7 @@ env:
 script: "npm run travis"
 before_script:
   - npm install typescript
-  - npm install node-gyp
+  - npm install -g node-gyp
   - npm install -D @types/node
   - npm install -D eslint
   - npm install -D @typescript-eslint/eslint-plugin @typescript-eslint/parser
