--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@
 ---
 language: node_js
 node_js:
-  - 11
+  - 11  # NAPI_VERSION < 5
   - 14
 os:
   - linux
@@ -38,9 +38,16 @@ env:
   - CXX: g++
   - CXX: clang++
 jobs:
+  include:
+    - dist: xenial  # g++ 5.4.0
+      node_js: 11   # NAPI_VERSION < 5
+      env: CXX=g++
+    - dist: xenial  # g++ 5.4.0
+      node_js: 14   # NAPI_VERSION >=5
+      env: CXX=g++
   exclude:
     - os: osx
-      env: CXX=g++ # It's actually clang in binary.
+      env: CXX=g++  # It's actually clang in binary: no need to repeat.
 
 script: "npm run travis"
 before_script:
