Tested for combination of older environment

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,8 @@
 ---
 language: node_js
 node_js:
-  - 11  # NAPI_VERSION < 5
-  - 14
+  - 10  # NAPI_VERSION > 5
+  - 11  # NAPI_VERSION <= 5
 os:
   - linux
   - osx
@@ -40,10 +40,13 @@ env:
 jobs:
   include:
     - dist: xenial  # g++ 5.4.0
-      node_js: 11   # NAPI_VERSION < 5
+      node_js: 10   # NAPI_VERSION > 5
       env: CXX=g++
     - dist: xenial  # g++ 5.4.0
-      node_js: 14   # NAPI_VERSION >=5
+      node_js: 11   # NAPI_VERSION <= 5
+      env: CXX=g++
+    - dist: xenial  # g++ 5.4.0
+      node_js: 14   # NAPI_VERSION > 5
       env: CXX=g++
   exclude:
     - os: osx
