Tested for combination of older environment

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,15 +28,18 @@
 ---
 language: node_js
 node_js:
-#  - 10  # NAPI_VERSION > 5
+  - 10  # NAPI_VERSION > 5
   - 11  # NAPI_VERSION <= 5
+  - 12  # NAPI_VERSION > 5
+  - 13  # NAPI_VERSION > 5
+  - 14  # NAPI_VERSION > 5
 os:
   - linux
-#  - osx
+  - osx
 dist: bionic
 env:
   - CXX: g++
-#  - CXX: clang++
+  - CXX: clang++
 jobs:
   include:
     - dist: xenial  # g++ 5.4.0
@@ -44,6 +47,12 @@ jobs:
       env: CXX=g++
     - dist: xenial  # g++ 5.4.0
       node_js: 11   # NAPI_VERSION <= 5
+      env: CXX=g++
+    - dist: xenial  # g++ 5.4.0
+      node_js: 12   # NAPI_VERSION > 5
+      env: CXX=g++
+    - dist: xenial  # g++ 5.4.0
+      node_js: 13   # NAPI_VERSION > 5
       env: CXX=g++
     - dist: xenial  # g++ 5.4.0
       node_js: 14   # NAPI_VERSION > 5
