--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,9 @@ jobs:
     - dist: xenial  # g++ 5.4.0
       node_js: 16   # NAPI_VERSION > 5
       env: CXX=g++
-      install: sudo apt-get install -y python3
+      install:
+        - sudo apt-get update
+        - sudo apt-get install -y python3
 
 script: "npm run travis"
 before_script:
