--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,9 @@ jobs:
       env: CXX=g++
       install:
         - sudo apt-get update
-        - sudo apt-get install -y python3
+        - sudo apt-get install software-properties-common
+        - sudo add-apt-repository ppa:deadsnakes/ppa
+        - sudo apt-get install -y python3.8
 
 script: "npm run travis"
 before_script:
