--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,8 @@ jobs:
       install:
         - sudo apt-get update
         - sudo apt-get install software-properties-common
-        - sudo add-apt-repository ppa:deadsnakes/ppa -y
+        - sudo add-apt-repository -y ppa:deadsnakes/ppa
+        - sudo apt-get update
         - sudo apt-get install -y python3.8
 
 script: "npm run travis"
