test xenial environment

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ jobs:
       node_js: 16   # NAPI_VERSION > 5
       env:
         - CXX=g++
-        - PYTHON=/user/bin/python3.8
+        - PYTHON=/usr/bin/python3.8
       install:
         - sudo apt-get update
         - sudo apt-get install software-properties-common
