Tested for node 16, reduce Travis CI test conditions to save free credit

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,12 +29,19 @@
 language: node_js
 node_js:
   - 16  # NAPI_VERSION > 5
+os:
+   - linux
+   - osx
+ dist: bionic
+ env:
+   - CXX: g++
+   - CXX: clang++
 jobs:
   include:
-    - dist: xenial  # g++ 5.4.0
+    - dist: xenial  # g++ 5.4.0 (not C++-17 savvy), clang++ 7 (C++-17)
       node_js: 16   # NAPI_VERSION > 5
       env:
-        - CXX=g++
+        - CXX=clang++
         - PYTHON=/usr/bin/python3.8
       install:
         - sudo apt-get update
@@ -42,6 +49,9 @@ jobs:
         - sudo add-apt-repository -y ppa:deadsnakes/ppa
         - sudo apt-get update
         - sudo apt-get install -y python3.8
+  exclude:
+    - os: osx
+      env: CXX=g++  # It's actually clang in binary: no need to repeat.
 
 script: "npm run travis"
 before_script:
